Enhance methods section by incorporating grazing disturbance indicator values and clarifying the analysis of environmental affinities. Update text to reflect the use of PCA for summarizing affinities across plant communities.

--- a/manuscript/methods.qmd
+++ b/manuscript/methods.qmd
@@ -83,7 +83,7 @@ Microclimate data was recorded continuously every 15 minutes, between July 2019 
 
 In 2022, standing biomass was harvested at peak growing season in all unclipped and -grazed control plots. The biomass was harvested 2-3 cm above the ground, dried at 65 °C for 72 h, and weighed. Plant species composition and vegetation height were recorded at peak growing season in all plots before the treatment in 2019 and after 3 years in 2022. We visually estimated the percentage cover of all vascular plant species to the nearest 1 % on the 25 x 25 cm inner area of each plot. The total coverage in each plot can exceed 100 %, due to layering of the vegetation. For species identification we followed the nomenclature from Lid & Lid @Lid2010-ck. The average vegetation height was measured at four points in each plot.
 
-Plant traits and environmental affinities for as many plant species as possible were collected. Plant height was collected at peak growing season in 2022 for the species making up 80 % of the total species coverage in a subset of plots. The data was collected from ambient and warmed plots that received 0, 5, 10, or 50 kg N ha^-1^ y^-1^ of nitrogen (unclipped and ungrazed) and ambient and warmed plots that were grazed but not fertilized (n = 40 plots). Vegetative plant height was measured as the unstreched plant height from the ground to the highest photosynthetic tissue on the plant from up to five individuals per species and plot (n = 1526 individual measurements). For more details on the measurements see [@Vandvik2025-traits]. We used Ellenberg indicator values for light, temperature, nitrogen, reaction,and moisture as environmental affinities. These data were extracted from a database for European vascular plants [@tichy2023ellenberg].
+Plant traits and environmental affinities for as many plant species as possible were collected. Plant height was collected at peak growing season in 2022 for the species making up 80 % of the total species coverage in a subset of plots. The data was collected from ambient and warmed plots that received 0, 5, 10, or 50 kg N ha^-1^ y^-1^ of nitrogen (unclipped and ungrazed) and ambient and warmed plots that were grazed but not fertilized (n = 40 plots). Vegetative plant height was measured as the unstreched plant height from the ground to the highest photosynthetic tissue on the plant from up to five individuals per species and plot (n = 1526 individual measurements). For more details on the measurements see [@Vandvik2025-traits]. We used Ellenberg indicator values for light, temperature, nitrogen, reaction, and moisture as environmental affinities, extracted from a database for European vascular plants [@tichy2023ellenberg]. In addition we used one grazing (and mowing?) disturbance indicator value developed for European plants [@midolo2023disturbance]. For 87 % of the species (47 out of 54) affinities were available.
 
 ### Statistical analysis
 
@@ -107,4 +107,6 @@ model <- psem(
 
 ```
 
-[*This text needs to be updated with new PCA and SEM for affinities*] To better understand the underlying mechanisms, i.e. change in abundance, colonization and extinctions, for how the global change drivers affect diversity, we compared traits of *lose*r and *winner* species. Species were classified as *losers* if they went *extinct* (species that are present pre-treatment but not in the final year and thus go extinct) or *decreased in cover* (species that decrease in cover \> 10% between pre-treatment and the final year). Contrary, species were classified as *winners* if they *colonized* the plots (species that are not present pre-treatment but in the final year and colonize the plot) or *increased* in cover (species that increase in cover \> 10% between pre-treatment and the final year). For each species we compiled the following traits: plant height, Ellenberg light and temperature indicator values. We then calculated the community weighted trait means for losers and winner using the traitstrap package [@telford2021traitstrap; @maitner2023bootstrapping]. Finally, we tested if the global change drivers affect these community weighted trait means for losers and winners using a linear fixed effects model. We ran separate models for each trait as response and the interactions of the three drivers as predictors. The analysis was run separately for each site.
+\[*This text needs to be updated with new PCA and SEM for affinities*\]
+
+To better understand the underlying mechanisms we used environmental affinities to study the effects of the three global change drivers on the plant community composition. We used plant height, five Ellenberg indicator values (light, temperature, nutrients, reaction, and moisture) as well as one grazing disturbance indicator value. \[*Explain for how many species these affinities were found*\]. We then calculated the community weighted affinity means using the traitstrap package [@telford2021traitstrap; @maitner2023bootstrapping]. To summarize the affinities across the alpine and sub-alpine plant communities, we performed a PCA with scaled and centered affinities from both sites using the vegan package (REF).
