--- a/manuscript/SI.qmd
+++ b/manuscript/SI.qmd
@@ -34,6 +34,7 @@ library(ggpubr)
 
 ```{r}
 #| label: fig-daily-climate
+#| fig-height: 6
 #| warning: false
 #| fig-cap: "a) Daily temperature and soil moisture values, measured over the period of the experiment in the alpine and sub-alpine sites and b) average summer temperature and soil moisture between May and September. Shown are air (30 cm), ground (0 cm), soil temperature (-5 cm), and soil moisture measured with Tomst loggers between August 2019 and October 2022. Colour indicates the ambient (black) and warming (red) treatment. Air, ground and soil temperature were higher and soil moisture was lower in the warming treatment, indicated by the star in each panel."
 
@@ -370,8 +371,8 @@ To understand how traits respond to the different global change drivers, we anal
 #| echo: false
 #| message: false
 #| warning: false
-#| fig-width: 10
-#| fig-height: 15
+#| fig-width: 8
+#| fig-height: 10
 #| fig-cap: "Trait distributions for different treatments at the alpine (upper row) and sub-alpine site (bottom row). Shown are the trait distributions for plant height and Ellenberg light, temperature, nutrient, moisture, salinity and reaction indicator values, as well as a mowing and grazing disturbance indicator. The colours indicate the different treatments: a) warming (ambient = black, warming = red), b) nitrogen addition levels, and c) clipping (control, medium, intensive)."
 
 # Load the individual plots
@@ -384,9 +385,11 @@ tar_load(traits_clipping_plot)
   (traits_nitrogen_plot + labs(tag = "b) Nitrogen")) +
   (traits_clipping_plot + labs(tag = "c) Clipping")) +
   plot_layout(ncol = 1, guides = "collect") &
-  theme(legend.position = "bottom",
-        legend.box="vertical",
-        plot.tag = element_text(size = 12, hjust = 0, vjust = -0.2))
+  theme(legend.position = "none",
+        legend.box = "vertical",
+        plot.tag.position = c(0.12, 1.08),
+        plot.tag = element_text(size = 12, hjust = 0, vjust = 1),
+        plot.margin = margin(t = 10, r = 5, b = 5, l = 5))
 
 ```
 
