Revise methods section to clarify the use of plant height and environmental affinities in characterizing plant community niches; update standing biomass estimation and statistical analysis descriptions for consistency and accuracy.

--- a/manuscript/methods.qmd
+++ b/manuscript/methods.qmd
@@ -83,17 +83,17 @@ Microclimate data was recorded continuously every 15 minutes, between July 2019 
 
 In 2022, standing biomass was harvested at peak growing season in all unclipped and -grazed control plots. The biomass was harvested 2-3 cm above the ground, dried at 65 °C for 72 h, and weighed. Plant species composition and vegetation height were recorded at peak growing season in all plots before the treatment in 2019 and after 3 years in 2022. We visually estimated the percentage cover of all vascular plant species to the nearest 1 % on the 25 x 25 cm inner area of each plot. The total coverage in each plot can exceed 100 %, due to layering of the vegetation. For species identification we followed the nomenclature from Lid & Lid @Lid2010-ck. The average vegetation height was measured at four points in each plot.
 
-Plant traits and environmental affinities for as many plant species as possible were collected. Plant height was collected at peak growing season in 2022 for the species making up 80 % of the total species coverage in a subset of plots. The data was collected from ambient and warmed plots that received 0, 5, 10, or 50 kg N ha^-1^ y^-1^ of nitrogen (unclipped and ungrazed) and ambient and warmed plots that were grazed but not fertilized (n = 40 plots). Vegetative plant height was measured as the unstreched plant height from the ground to the highest photosynthetic tissue on the plant from up to five individuals per species and plot (n = 1526 individual measurements). For more details on the measurements see [@Vandvik2025-traits]. We used Ellenberg indicator values for light, temperature, nitrogen, reaction, and moisture as environmental affinities, extracted from a database for European vascular plants [@tichy2023ellenberg]. In addition we used one grazing (and mowing?) disturbance indicator value developed for European plants [@midolo2023disturbance]. For 87 % of the species (47 out of 54) affinities were available.
+We used plant height and environmental affinities to characterize the environmental preference / niche of the plant communities. Plant height was collected at peak growing season in 2022 for the species making up 80 % of the total species coverage in a subset of plots. The trait was collected from ambient and warmed plots that received 0, 5, 10, or 50 kg N ha^-1^ y^-1^ of nitrogen (unclipped and ungrazed) and ambient and warmed plots that were grazed but not fertilized (n = 40 plots). Vegetative plant height was measured as the unstreched plant height from the ground to the highest photosynthetic tissue on the plant from up to five individuals per species and plot (n = 1526 individual measurements). For more details on the measurements see [@Vandvik2025-traits]. We used Ellenberg indicator values for light, temperature, nitrogen, reaction, and moisture as environmental affinities, extracted from a database for European vascular plants [@tichy2023ellenberg]. In addition we used one grazing (and mowing?) disturbance indicator value developed for European plants [@midolo2023disturbance]. For 87 % of the species (47 out of 54 species) affinities were available.
 
 ### Statistical analysis
 
-Since standing biomass was only collected in the unclipped and -grazed control plots in 2022, we estimated standing biomass for all plots pre-treatment (2019) and after 3 years of treatment (2022) by multiplying the sum of vascular plant cover for all species with vegetation height. The data was then back-transformed to weight per area (kg m^-2^) by using the standing biomass collected in the unclipped and ungrazed control plots in 2022 (n = 40). We first run a linear regression for these control plots with collected standing biomass as response and vascular plant cover x height and the interaction of warming and log transformed nitrogen addition as predictors. We compared the AIC's from models with all combinations of these predictors to find the most parsimonious model. The model with the lowest AIC contained vascular plant cover x height and log transformed nitrogen addition (R^2^ = 0.87). The regression coefficients from this model was then used to back transform the vascular plant cover x height in all plots to estimated standing biomass (kg m^-2^; hereafter standing biomass; Supplementary Figure S4, Table S3). Separate models were run to backtransform the 2019 and 2022 data.
+Standing biomass was only collected in the unclipped and -grazed control plots in 2022, and we therefore estimated standing biomass for all plots pre-treatment (2019) and after 3 years of treatment (2022) by multiplying the sum of vascular plant cover for all species with vegetation height. The data was then back-transformed to weight per area (kg m^-2^) by using the standing biomass collected in the unclipped and ungrazed control plots in 2022 (n = 40). We first run a linear regression for these control plots with collected standing biomass as response and vascular plant cover x height and the interaction of warming and log transformed nitrogen addition as predictors. We compared the AIC's from models with all combinations of these predictors to find the most parsimonious model. The model with the lowest AIC contained vascular plant cover x height and log transformed nitrogen addition (R^2^ = 0.87). The regression coefficients from this model was then used to back transform the vascular plant cover x height in all plots to estimated standing biomass (kg m^-2^; hereafter standing biomass; Supplementary Figure S4, Table S3). Separate models were run to backtransform the 2019 and 2022 data.
 
-To test if warming, nitrogen addition and clipping affect standing biomass after three years of treatment in 2022, we used a fixed effects linear model with a normal error distribution. The model contained standing biomass as response and a three-way interaction of warming, nitrogen addition and clipping as predictors. The analysis was ran separately for each of the sites. The experimental design did not allow running a mixed-effects model, because there is no replication at the plot level. Clipping was transformed to a numerical scale with 0 (control), 2 (intermediate) or 4 (intensive) cuts per growing season. The nitrogen levels we chose ranged from low to very high levels and they were unevenly distributed on a linear scale. We did not expect linear responses along this nitrogen gradient and therefore used three models that differed in the nitrogen addition treatment term, reflecting separate assumptions for the response to nitrogen addition: a) a linear term as a null model (N), b) a logarithmic term (log(N)) to account for the uneven distribution of the nitrogen levels, and c) a quadratic term (N^2^) allowing for a concave/convex relationship. To find the most parsimonious model, we compared the AIC values of all three models and chose the one with the lowest AIC values. If the models differed in 𝚫AIC ≤ 2, we chose the simplest model. We preferred the logarithmic before the linear model, because it reflects a more realistic assumption than the null model. The most parsimonious model for standing biomass was the logarithmic model. We also ran the same analysis for grazing instead of clipping.
+To test if warming, nitrogen addition and clipping affect standing biomass after three years of treatment in 2022, we used a fixed effects linear model with a normal error distribution. The model contained standing biomass as response and a three-way interaction of warming, nitrogen addition and clipping as predictors. The analysis was ran separately for each of the sites. The experimental design did not allow running a mixed-effects model, because there is no replication at the plot level. Clipping was transformed to a numerical scale with 0 (control), 2 (intermediate) or 4 (intensive) cuts per growing season. The nitrogen levels we chose ranged from low to very high levels and they were unevenly distributed on a linear scale. We did not expect linear responses along this nitrogen gradient and therefore used three models that differed in the nitrogen addition treatment term, reflecting separate assumptions for the response to nitrogen addition: a) a linear term as a null model (N), b) a logarithmic term (log(N)) to account for the uneven distribution of the nitrogen levels, and c) a quadratic term (N^2^) allowing for a concave/convex relationship. To find the most parsimonious model, we compared the AIC values of all three models and chose the one with the lowest AIC values. If the models differed in 𝚫AIC ≤ 2, we chose the simplest model. We preferred the logarithmic before the linear model, because it reflects a more realistic assumption than the null model. The most parsimonious model for standing biomass was the logarithmic model. We also ran the same analysis for grazing (as a factor with two levels ungrazed and grazed) instead of clipping.
 
-To test if warming, nitrogen addition and clipping affect plant diversity at the end of the experiment (2022), we calculated the following diversity indices: species richness (n; number of species), Shannon diversity $H' = -\Sigma_{i} p_{i} * ln(p_{i})$, where $p_{i}$ is the proportional abundance of species i) and species evenness $\frac{H'}{log(n)}$ using the vegan package [@oksanen2022vegan]. The most parsimonious model for all three diversity indices was the linear model, except for a quadratic model for Shannon diversity at the sub-alpine site. For consistency, and because 𝚫AIC between the quadratic and linear model was relatively low (𝚫AIC = 4.1), we used the linear model. We ran the same analysis for grazing instead of clipping.
+To test if warming, nitrogen addition and clipping affect plant diversity at the end of the experiment (2022), we calculated the following diversity indices: species richness (n; number of species), Shannon diversity $H' = -\Sigma_{i} p_{i} * ln(p_{i})$, where $p_{i}$ is the proportional abundance of species i) and species evenness $\frac{H'}{log(n)}$ using the vegan package [@oksanen2022vegan]. The most parsimonious model for all three diversity indices was the linear model, except for a quadratic model for Shannon diversity at the sub-alpine site. For consistency, and because 𝚫AIC between the quadratic and linear model was relatively low (𝚫AIC = 4.1), we used the linear model. We ran the same analysis for grazing (as a factor with two levels ungrazed and grazed) instead of clipping.
 
-To test if warming, nitrogen addition and clipping affect plant diversity directly and/or indirectly via standing biomass (H1), we ran separate structural equation models (SEM) for each site (see models below). Nitrogen addition was log transformed and clipping was coded as a numeric variable representing the number of times the plot was clipped (see above). We ran separate SEMs for Shannon diversity, species richness, and evenness. We also repeated the SEMs described above for natural grazing (grazing and exclosure) instead of the clipping treatment. All SEMs were run using the piecewiseSEM package [@lefcheck2016piecewisesem].
+To test if warming, nitrogen addition and clipping affect plant diversity directly and/or indirectly via standing biomass (H1), we ran separate structural equation models (SEM) for each site (see models below). Nitrogen addition was log transformed and clipping was coded as a numeric variable representing the number of times the plot was clipped (see above). We ran separate SEMs for Shannon diversity, species richness, and evenness. We also repeated the SEMs described above for natural grazing (as a factor with two levels ungrazed and grazed) instead of the clipping treatment. All SEMs were run using the piecewiseSEM package [@lefcheck2016piecewisesem].
 
 ```{r}
 #| label: model
@@ -107,6 +107,6 @@ model <- psem(
 
 ```
 
-\[*This text needs to be updated with new PCA and SEM for affinities*\]
+To understand the underlying mechanisms how the three global change drivers affect the plant community composition, we used environmental affinities to describe the environmental niches of these communities. We used the functional trait plant height, and five Ellenberg indicator values (light, temperature, nutrients, reaction, and moisture) as well as one grazing disturbance indicator value. We then calculated the community weighted affinity means using the traitstrap package [@telford2021traitstrap; @maitner2023bootstrapping]. Because plant height was only collected for a subset of global change treatments (see above), we imputed the plant trait from the most similar treatments. For the missing nitrogen levels, we imputed the trait from the nearest nitrogen level (i.e. 0.5 from 0, 1 from 5, and 100 from 50 kg N ha\^-1\^ y^-1^). For the unfertilized ambient and warmed clipped plots, the traits were imputed from unfertilized ambient and warmed grazed plots, respectively. Since we collected no plant traits from the combination of clipping and nitrogen addition, plant height for these plots was imputed from ungrazed plots with only nitrogen addition and ambient or warmed climate.
 
-To better understand the underlying mechanisms we used environmental affinities to study the effects of the three global change drivers on the plant community composition. We used plant height, five Ellenberg indicator values (light, temperature, nutrients, reaction, and moisture) as well as one grazing disturbance indicator value. \[*Explain for how many species these affinities were found*\]. We then calculated the community weighted affinity means using the traitstrap package [@telford2021traitstrap; @maitner2023bootstrapping]. To summarize the affinities across the alpine and sub-alpine plant communities, we performed a PCA with scaled and centered affinities from both sites using the vegan package (REF).
+To summarize the environmental affinities across the alpine and sub-alpine plant communities, we performed a PCA with scaled and centered variables across both sites using the vegan package [@oksanen2022vegan]. The first two PCA axis explained 83.9 % of the variation together, and we did not consider more PCA axis. We then ran the same SEM as described above where the PCA axis 1 and 2 replace diversity. Because the joint PCA across sites described the sub-alpine site less well, we repeated the PCA separately for each site and ran the same SEMs but with PCA axis from the separate PCA (see Supplementary Figures XXX).
