--- a/manuscript/introduction.qmd
+++ b/manuscript/introduction.qmd
@@ -14,21 +14,29 @@ library(tarchetypes)
 
 ## Introduction
 
-Anthropogenic global changes linked to land-use change, resource exploitation, climate change, invasive alien species, and pollution pose major and accelerating threats to biodiversity and ecosystem functioning [@Ipbes2019-sd]. These global change drivers do not act in isolation, however, but occur simultaneously and often interact in complex ways so that their cumulative impacts may exceed the sum of single drivers [@Speiser2022-st; @Komatsu2019-yr; @oliver2014interactions; @xue2024number]. While these interactive effects of global change drivers are complex, understanding these interactions is key to forecasting changes to biodiversity exposed to multiple global change drivers. Experiments are one way to disentangle the effects of such complex interactions and providing a mechanistic understanding of the multifactorial nature of global change drivers.
+Anthropogenic global changes linked to land-use change, resource exploitation, climate change, invasive alien species, and pollution pose major and accelerating threats to biodiversity and ecosystem functioning [@Ipbes2019-sd]. These global change drivers do not act in isolation, however, but occur simultaneously and often interact in complex ways so that their cumulative impacts may exceed the sum of single drivers [@Speiser2022-st; @Komatsu2019-yr; @oliver2014interactions; @xue2024number]. While these interactive effects are complex, understanding these interactions is key to forecasting changes to biodiversity exposed to multiple global change drivers. Experiments are one way to disentangle the effects of such complex interactions and providing a mechanistic understanding of the multifactorial nature of global change drivers.
 
-\[*needs some more work...*\] This need has inspired numerous experiments manipulating multiple global change drivers simultaneously [@Speiser2022-st; @Komatsu2019-yr]. One insight from many of these experiments is that different global change drivers often impact plant community biomass, as well as plant species composition and diversity (REFs). One of the major mechanisms through which several of these drivers, including warming and nitrogen addition, are affecting plant community composition and diversity is through increasing competition for light (REFs). Community biomass has been used as an mechanism of the magnitude of competitive interactions. Diversity often declines with increasing biomass (Grime and forward). We therefore hypothesis that the effects of warming and nitrogen addition and grazing on alpine plant diversity operate through the same underlying mechanism (@fig-concept), namely the role of standing biomass in controlling the direction and intensity of plant-plant interactions (H1). Specifically, a warmer climate and/or nitrogen addition should generally push plant communities towards increased standing biomass and hence increasingly competitive plant-plant interactions (i.e. pink and brown arrows in @fig-concept). If these expectations are confirmed, grazing, which can be managed locally and at short time scales, provides an opportunity to empirically and experimentally test conditions under which grazing positively influences plant diversity, which again could guide management solutions for alpine grasslands exposed to climate warming and atmospheric nitrogen deposition (change this last sentence a bit?). We therefore propose that we could simplify and synthesize across multiple global change drivers by using biomass as a common currency which reflects the magnitude of their impacts on competitive processes. If so, we predict that incorporating biomass in models of community response to global change drivers eliminates the direct and interacting impact of those drivers.
+[*needs some more work...*] This need has inspired numerous experiments manipulating multiple global change drivers simultaneously [@Komatsu2019-yr; @dainese2024global]. One insight from these experiments is that different drivers often impact plant community biomass, as well as plant species composition and diversity [@Speiser2022-st; @kaarlejarvi2017herbivores; more...]. One of the major mechanisms through which several of these drivers, including warming, nitrogen addition, and grazing, are affecting plant community composition and diversity is through increased community biomass resulting in more competitive interactions for light and nutrients [@grime1973competitive; @chesson2000mechanisms]. These shifts in competitive interactions may then again lead to changes in species composition and diversity, with lower-stature and specialist species decreasing in abundance and diversity as they are exposed a taller and denser vegetation sward which are stronger competitors for light and nutrients (refs). We therefore propose that we could simplify and synthesize across multiple global change drivers by using community biomass as a *common currency*, which reflects the magnitude of their impacts on competitive processes. If so, we predict that incorporating community biomass in models of community response to global change drivers eliminates the direct and interacting impact of those drivers.
 
-We test this prediction in field experiments in montane Norwegian grassland manipulating three common global change drivers: climate change, nitrogen deposition, and grazing. All three drivers are known to affect community biomass…..BRIEF EVIDENCE FOR EACH OF THE THREE.
+We test this prediction in a field experiment in montane Norwegian grassland manipulating three common global change drivers: climate warming, nitrogen deposition, and grazing. All three drivers are known to affect community biomass, composition and diversity. In ecosystems, where temperature is a limiting factor for productivity, a warmer climate will thus often result in increased plant growth, leading to more standing biomass [@elmendorf2012plot; @fazlioglu2021warming]. The increase in standing biomass often leads to a change in species composition and diversity, with a reduction in smaller alpine specialist species and an increase in taller species that are better competitors for light and nutrients, such as grasses and shrubs [@Vandvik2020-hu; @Alexander2015-gu; @lynn2023traits; @winkler2019responses]. In grassland vegetation, where plant growth and biomass is limited by nutrients, the specific effects of added nitrogen tend to be similar to those of increased temperature; increased growth, taller and denser vegetation, and intensified competition for light and nutrients[@yue2020changes; @Humbert2016-wg]. Accordingly, when grassland vegetation is exposed to both warming and nitrogen addition, both drivers have qualitatively similar effects on standing biomass and diversity [@yue2020changes]. In contrast to warming and nutrient addition, grazing animals affect plant communities primarily through removing biomass and acting as disturbance agents through grazing and trampling, although we note that their effects on productivity are complex as they also add nutrients addition from urine and dung. In productive systems, increased removal of biomass by grazers can lead to release from competitive interactions and hence increased diversity [@Austrheim2001-nu; @niedrist2009plant; @Bernes2015-yg; @frank2005interactive; @kaarlejarvi2017herbivores]. The magnitude of these effects of grazing on biodiversity thus depend both on the direction and intensity of plant-plant interactions within the vegetation (i.e., on productivity and/or environmental harshness) and on the intensity of grazing (i.e., the amount of biomass removed).
 
-We tested these predictions in mountain grasslands in, because they harbor unique biodiversity and provide important ecosystem functions and services such as carbon sequestration, water cycling, and grazing pastures; underpinning the lives and livelihoods of hundreds of millions of people [@egan2017mountain]. We used a fully factorial field experiment replicated across two sites, an alpine and a sub-alpine grassland in south-western Norway (@fig-methods), representing different annual and growing season temperatures and consequently plant productivity (Supplementary Figures S1 and S2a). The two sites reflect two different environmental contexts, allowing to test for context-dependency of community responses to global change drivers and how they are mediated by community biomass. These grasslands are grazed by domestic and natural grazers, with the extant grazing pressure decreasing with elevation (Supplementary Figure S2b). Alpine and sub-alpine plant communities were exposed to a combination of warmer climate (transplant to lower elevation), increased nitrogen deposition (seven levels ranging between 0 and 100 kg N ha^-1^ y^-1^), and simulated grazing by clipping and removing biomass at two different intensities. Plant communities moved to lower elevation experienced an approximately 3°C increase in average growing season temperature (air: 3.09 ± 0.186 °C, ground: 3.06 ± 0.176 °C, and soil: 2.82 ± 0.142 °C; Supplementary Figure S1, Table S1). We applied a large range of nitrogen levels to simulate nitrogen addition close to and well beyond the current atmospheric nitrogen deposition in the mountains in south-western Norway [@aas2023monitoring] (2-3 kg N ha^-1^ y^-1^) and the critical load for change in species composition in alpine grasslands [@bobbink2011review] (c. 5-10 kg N ha^-1^ y^-1^). Our understanding of environmentally extreme conditions is limited, and such simulations can provide a mechanistic understanding of thresholds for community change [@Kayler2015-pr]. We simulated grazing by clipping because our main interest was in the effect of biomass removal, however, we also had naturally grazed plots outside the fenced area to account for the difference between grazing by animals and clipping. After three years of global change treatments, we harvested standing biomass at peak growing season and assessed the change in vascular plant species composition and diversity.
+We repeat the experiment and analyses in two different environments (alpine and sub-alpine communities) to evaluate context dependency of community responses to global change drivers and how they are mediated by community biomass.
 
-\[*Aim of the study*\] The aim of this study is to assess if warmer climate, nitrogen addition, and grazing operate through the same mechanisms, namely standing biomass, on diversity in alpine and sub-alpine grasslands.
+Add paragraph on using indicators of environmental affinities to gain further insight into mechanisms, especially those mediated by something other than community biomass. Specific predictions.
 
-We repeat the experiment and analyses in two different environments (alpine and subalpine communities) to evaluate context dependency of community responses to global change drivers and how they are mediated by community biomass.
+-   Warming and nitrogen: taller communities, with higher temperature, nutrient requirement and are less light demanding
 
-Add paragraph on using indicators of environmental affinities (and maybe real traits) to gain further insight into mechanisms, especially those mediated by something other than community biomass. Specific predictions.
+-   Grazing: faster community? grazing tolerant community?
+
+-   Using environmental affinities can provide further insights into the mechanism, in particular those that are not mediated through biomass, i.e. change in species composition through colonization and extinction
+
+\[*Where does this go?*\] We tested these predictions in mountain grasslands in, because they harbor unique biodiversity and provide important ecosystem functions and services such as carbon sequestration, water cycling, and grazing pastures; underpinning the lives and livelihoods of hundreds of millions of people [@egan2017mountain]. We used a fully factorial field experiment replicated across two sites, an alpine and a sub-alpine grassland in south-western Norway (@fig-methods), representing different annual and growing season temperatures and consequently plant productivity (Supplementary Figures S1 and S2a). The two sites reflect two different environmental contexts, allowing to test for context-dependency of community responses to global change drivers and how they are mediated by community biomass. These grasslands are grazed by domestic and natural grazers, with the extant grazing pressure decreasing with elevation (Supplementary Figure S2b). Alpine and sub-alpine plant communities were exposed to a combination of warmer climate (transplant to lower elevation), increased nitrogen deposition (seven levels ranging between 0 and 100 kg N ha^-1^ y^-1^), and simulated grazing by clipping and removing biomass at two different intensities. Plant communities moved to lower elevation experienced an approximately 3°C increase in average growing season temperature (air: 3.09 ± 0.186 °C, ground: 3.06 ± 0.176 °C, and soil: 2.82 ± 0.142 °C; Supplementary Figure S1, Table S1). We applied a large range of nitrogen levels to simulate nitrogen addition close to and well beyond the current atmospheric nitrogen deposition in the mountains in south-western Norway [@aas2023monitoring] (2-3 kg N ha^-1^ y^-1^) and the critical load for change in species composition in alpine grasslands [@bobbink2011review] (c. 5-10 kg N ha^-1^ y^-1^). Our understanding of environmentally extreme conditions is limited, and such simulations can provide a mechanistic understanding of thresholds for community change [@Kayler2015-pr]. We simulated grazing by clipping because our main interest was in the effect of biomass removal, however, we also had naturally grazed plots outside the fenced area to account for the difference between grazing by animals and clipping. After three years of global change treatments, we harvested standing biomass at peak growing season and assessed the change in vascular plant species composition and diversity.
+
+\[*Unclear if this is needed, probably not:* *Hypothesis and predictions*\] We therefore hypothesis that the effects of warming and nitrogen addition and grazing on alpine plant diversity operate through the same underlying mechanism (@fig-concept), namely the role of standing biomass in controlling the intensity of plant-plant interactions (H1). Specifically, a warmer climate and/or nitrogen addition should generally push plant communities towards increased standing biomass and hence increasingly competitive plant-plant interactions. If these expectations are confirmed, grazing, which can be managed locally and at short time scales, provides an opportunity to empirically and experimentally test conditions under which grazing positively influences plant diversity, which again could guide management solutions for alpine grasslands exposed to climate warming and atmospheric nitrogen deposition (change this last sentence a bit?).
 
 ![The working hypothesis that the three global change drivers warming, nitrogen addition and clipping (or grazing) affect plant diversity a) directly and b) indirectly via standing biomass.](figures/hypotheses.png){#fig-concept}
+
+\[*Old text ignore*\]
 
 *\[Mechanism\]* Biodiversity in grassland vegetation is impacted worldwide by multiple global change drivers [@Speiser2022-st]. Plant productivity generally responds to abiotic conditions, in particular temperature and precipitation [@craine2012timing]. In ecosystems, where temperature is a limiting factor for productivity, a warmer climate will thus often result in increased plant growth, leading to more standing biomass [@elmendorf2012plot; @fazlioglu2021warming], with a positive feedback to productivity (@fig-concept a). These vegetation changes have implications for biodiversity, operating via changes in the nature and intensity of species interactions within plant communities. Along environmental gradients, as climate warms and biomass increases, we expect a shift from the facilitative plant-plant interactions that tend to dominate under high environmental stress towards the competitive interactions characteristic of more environmentally benign conditions, in line with the ‘Stress Gradient Hypothesis’; see e.g. [@bertness1994positive; @he2013global]. These shifts in the direction and intensity of the dominant plant-plant interactions in response to warming may again lead to changes in species composition and diversity, with lower-stature and less competitive specialist species decreasing in abundance and diversity as they are exposed to increased competition from a taller and denser vegetation sward [@Vandvik2020-hu; @Alexander2015-gu; @lynn2023traits; @winkler2019responses]. This effect may be exacerbated if they are exposed to more competitive range-shifting lowland generalists (REFs). Another global change driver with major impacts on the structure and diversity of terrestrial ecosystems, is atmospheric nitrogen deposition [@Ipbes2019-sd]. In grassland vegetation, where plant growth and biomass is limited by nutrients, the specific effects of added nitrogen tend to be similar to those of increased temperature; increased growth, taller and denser vegetation, and intensified competition for limited resources [@yue2020changes; @Humbert2016-wg] (@fig-concept a). Accordingly, when grassland vegetation is exposed to both warming and nitrogen addition, both drivers have qualitatively similar effects on plant productivity and diversity [@yue2020changes].
 
