Remove trait analysis from methods.

--- a/manuscript/methods.qmd
+++ b/manuscript/methods.qmd
@@ -83,7 +83,7 @@ Microclimate data was recorded continuously every 15 minutes, between July 2019 
 
 In 2022, standing biomass was harvested at peak growing season in all unclipped and -grazed control plots. The biomass was harvested 2-3 cm above the ground, dried at 65 °C for 72 h, and weighed. Plant species composition and vegetation height were recorded at peak growing season in all plots before the treatment in 2019 and after 3 years in 2022. We visually estimated the percentage cover of all vascular plant species to the nearest 1 % on the 25 x 25 cm inner area of each plot. The total coverage in each plot can exceed 100 %, due to layering of the vegetation. For species identification we followed the nomenclature from Lid & Lid @Lid2010-ck. The average vegetation height was measured at four points in each plot.
 
-We used plant height and environmental affinities to characterize the environmental preference / niche of the plant communities. Plant height was collected at peak growing season in 2022 for the species making up 80 % of the total species coverage in a subset of plots. The trait was collected from ambient and warmed plots that received 0, 5, 10, or 50 kg N ha^-1^ y^-1^ of nitrogen (unclipped and ungrazed) and ambient and warmed plots that were grazed but not fertilized (n = 40 plots). Vegetative plant height was measured as the unstreched plant height from the ground to the highest photosynthetic tissue on the plant from up to five individuals per species and plot (n = 1526 individual measurements). For more details on the measurements see [@Vandvik2025-traits]. We used Ellenberg indicator values for light, temperature, nitrogen, reaction, and moisture as environmental affinities, extracted from a database for European vascular plants [@tichy2023ellenberg]. In addition we used one grazing (and mowing?) disturbance indicator value developed for European plants [@midolo2023disturbance]. For 87 % of the species (47 out of 54 species) affinities were available.
+We used environmental affinities to characterize the environmental preference / niche of the plant communities. We used Ellenberg indicator values for light, temperature, nutrient, reaction, and moisture as environmental affinities, extracted from a database for European vascular plants [@tichy2023ellenberg]. In addition we used a grazing disturbance indicator value (i.e. an indicator for the severity of grazing) developed for European plants [@midolo2023disturbance]. For 87 % of the species (47 out of 54 species) these affinities were available.
 
 ### Statistical analysis
 
@@ -107,6 +107,6 @@ model <- psem(
 
 ```
 
-To understand the underlying mechanisms how the three global change drivers affect the plant community composition, we used environmental affinities to describe the environmental niches of these communities. We used the functional trait plant height, and five Ellenberg indicator values (light, temperature, nutrients, reaction, and moisture) as well as one grazing disturbance indicator value. We then calculated the community weighted affinity means using the traitstrap package [@telford2021traitstrap; @maitner2023bootstrapping]. Because plant height was only collected for a subset of global change treatments (see above), we imputed the plant trait from the most similar treatments. For the missing nitrogen levels, we imputed the trait from the nearest nitrogen level (i.e. 0.5 from 0, 1 from 5, and 100 from 50 kg N ha\^-1\^ y^-1^). For the unfertilized ambient and warmed clipped plots, the traits were imputed from unfertilized ambient and warmed grazed plots, respectively. Since we collected no plant traits from the combination of clipping and nitrogen addition, plant height for these plots was imputed from ungrazed plots with only nitrogen addition and ambient or warmed climate.
+To understand the underlying mechanisms of how the three global change drivers affect the plant community composition (H2), we used environmental affinities describing changes in the environmental niches of these communities in response to the treatments. We used five Ellenberg indicator values (light, temperature, nutrients, reaction, and moisture) and one grazing disturbance indicator value. We then calculated the community weighted affinity means using the traitstrap package [@telford2021traitstrap; @maitner2023bootstrapping].
 
-To summarize the environmental affinities across the alpine and sub-alpine plant communities, we performed a PCA with scaled and centered variables across both sites using the vegan package [@oksanen2022vegan]. The first two PCA axis explained 83.9 % of the variation together, and we did not consider more PCA axis. We then ran the same SEM as described above where the PCA axis 1 and 2 replace diversity. Because the joint PCA across sites described the sub-alpine site less well, we repeated the PCA separately for each site and ran the same SEMs but with PCA axis from the separate PCA (see Supplementary Figures XXX).
+To summarize the environmental affinities across the alpine and sub-alpine plant communities, we performed a PCA with scaled and centered variables across both sites using the vegan package [@oksanen2022vegan]. The first two PCA axis explained 83.9 % of the variation together, and we therefore did not consider more PCA axis. We then ran the same SEM as described above where the PCA axis 1 and 2 replace the diversity indices. Because the joint PCA across sites reflected the sub-alpine site less well compared to the alpine site, we repeated the PCA separately for each site and ran the SEMs again with PCA axis from the PCA analysis separated by site (see Supplementary Figures S7, and S8).
